--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
       "dest": "/api/process_ftx.py"
     },
     {
+      "src": "/",
+      "dest": "/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/$1"
     }
